--- a/scai/hmemo/test/cuda/CMakeLists.txt
+++ b/scai/hmemo/test/cuda/CMakeLists.txt
@@ -46,6 +46,6 @@ scai_project (
 
 include_directories ( ${BOOST_INCLUDE_DIR} )
 
-cuda_add_executable ( hmemoCUDATest ${CUDA_SOURCES} ${CXX_SOURCES} )
-
-target_link_libraries ( hmemoCUDATest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${MODULE_LIBRARY} )
+scai_unit_test ( EXECUTABLE hmemoCUDATest 
+                 CUDA
+                 FILES ${CUDA_SOURCES} ${CXX_SOURCES} )
