--- a/scai/lama/examples/mandelbrot/CMakeLists.txt
+++ b/scai/lama/examples/mandelbrot/CMakeLists.txt
@@ -32,20 +32,24 @@
  # @date 03.07.2016
 ###
 
+include ( scai_macro/scai_add_example )
+include ( scai_macro/scai_example_makefile )
+include ( scai_macro/scai_run_script )
+
 enable_language ( C )
 
 find_package( OpenGL )
 find_package( GLUT )
 
-if    ( OPENGL_FOUND AND GLUT_FOUND )
+if ( OPENGL_FOUND AND GLUT_FOUND )
 
     include_directories( ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR} )
 
     foreach ( executable mandelbrot )
-        add_executable( ${executable}.exe ${executable}.cpp )
-        target_link_libraries( ${executable}.exe ${MODULE_LIBRARY} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} )
-        set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
-        set ( EXAMPLE_EXECUTABLES "${EXAMPLE_EXECUTABLES} ${executable}.exe" )
+ 
+        scai_add_example ( EXECUTABLE ${executable}.exe
+                           FILES      ${executable}.cpp )
+
     endforeach ( executable )
 
     # use the recommended installation directory for this example directory
@@ -59,4 +63,4 @@ if    ( OPENGL_FOUND AND GLUT_FOUND )
     install ( FILES       ${EXAMPLE_FILES}
               DESTINATION ${INSTALL_EXAMPLE_DIR} )
 
-endif ( OPENGL_FOUND AND GLUT_FOUND )
+endif ()
